tests/negative/neg_pr362_named_generic_type_actual.safe
package neg_pr362_named_generic_type_actual

   function identity of t (value : t) returns t
      return value

   function broken returns integer
      return identity of (t = integer) (1)
